Truncate words, add tooltips, fix sidebar bug

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -77,15 +77,21 @@ a {
 }
 
 .sticky-top {
-
-  @media (min-width: 992px ) {
-    position: sticky;
-    top: 3rem;
-    min-height: calc(100vh - 3rem);
-    height: calc(100vh - 3rem);
-    overflow: auto;
-    overflow-x: hidden;
-    z-index: 1;
+  position: sticky;
+  top: 3rem;
+  min-height: calc(100vh - 3rem);
+  height: calc(100vh - 3rem);
+  overflow: auto;
+  overflow-x: hidden;
+  z-index: 1;
+  
+  @media(max-width: 991px) {
+    position: relative;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: auto;
   }
 }
 
@@ -108,6 +114,12 @@ ul.unstyled-list {
 
 .hide-on-mobile {
   @media(max-width: 991px) {
+    display: none;
+  }
+}
+
+.hide-on-desktop {
+  @media(min-width: 992px) {
     display: none;
   }
 }
