--- a/_sass/navbar.scss
+++ b/_sass/navbar.scss
@@ -86,21 +86,21 @@
 }
 
 .sidebar {
-  background-color: var(--dark-green);
+  background-color: var(--black);
   text-align: left;
   position: fixed;
   display: flex;
   flex-direction: column;
   height: 100%;
   top: 0;
-  z-index: 300;
+  z-index: 1000;
   bottom: 0;
   padding: 2rem 0;
   margin: 0;
   right: 0;
   border: 0;
-  width: 250px;
-  right: -300px;
+  width: 350px;
+  right: -400px;
   transition: right 100ms;
   overflow-y: scroll;
 
@@ -117,11 +117,11 @@
   .nav-item .nav-link {
     font-weight: 600;
     font-size: 1rem;
-    color: black;
+    color: var(--bg-white);
     padding: 10px 20px;
     transition: 200ms all;
 
-    &.active { color: black; }
+    &.active { color: var(--aqua); }
 
     &.button {
       color: white;
@@ -155,12 +155,12 @@ body.sidebar-active {
   .sidebar-overlay {
     content: "";
     display: block;
-    z-index: 200;
+    z-index: 100;
     position: fixed;
     height: 500px;
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, 0.5);
+    background: rgba(#080818, 0.7);
     left: 0;
     top: 0;
     bottom: 0;
@@ -172,8 +172,8 @@ body.sidebar-active {
 
 .sidebar-close {
   z-index: 9994;
-  width: 45px;
-  height: 45px;
+  width: 80px;
+  height: 80px;
   position: absolute;
   right: 0;
   top: 0;
@@ -182,7 +182,7 @@ body.sidebar-active {
   text-decoration: none;
   text-align: center;
   padding: 0;
-  color: rgba(black, 0.6);
+  color: var(--bg-white);
   font-style: normal;
   font-size: 30px;
   line-height: 45px;
